--- a/app/src/main/res/layout/content_admin_home.xml
+++ b/app/src/main/res/layout/content_admin_home.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -9,4 +9,10 @@
     tools:context="com.project.rushabh.jarvis.AdminHome"
     tools:showIn="@layout/app_bar_admin_home">
 
-</android.support.constraint.ConstraintLayout>
+    <ListView
+        android:id="@+id/myListView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+
+</RelativeLayout>
