--- a/app/src/main/res/layout/fragment_appliances.xml
+++ b/app/src/main/res/layout/fragment_appliances.xml
@@ -8,9 +8,16 @@
                 android:paddingTop="@dimen/activity_vertical_margin"
                 tools:context="com.project.rushabh.jarvis.Appliances$PlaceholderFragment">
 
-    <TextView
+    <!--<TextView
         android:id="@+id/section_label"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"/>-->
+
+    <GridView
+        android:id="@+id/appGridView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:numColumns="2"/>
+
 
 </RelativeLayout>
