--- a/app/src/main/res/layout/content_account_setup.xml
+++ b/app/src/main/res/layout/content_account_setup.xml
@@ -1,13 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.project.rushabh.jarvis.AccountSetup"
-    tools:showIn="@layout/activity_account_setup">-->
 
 <GridLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -19,7 +10,7 @@
 
     android:layout_marginTop="20dp"
     android:columnCount="2"
-    android:rowCount="3"
+    android:rowCount="4"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.project.rushabh.jarvis.AccountSetup"
     tools:showIn="@layout/activity_account_setup">
@@ -66,11 +57,29 @@
         android:text=""/>
 
     <TextView
-        android:id="@+id/asTvPassword"
+        android:id="@+id/asTvOldPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_column="0"
         android:layout_row="2"
+        android:text="@string/asTvOldPassword"
+        android:textSize="20sp"/>
+
+    <EditText
+        android:id="@+id/asEtOldPassword"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_column="1"
+        android:layout_row="2"
+        android:ems="10"
+        android:inputType="textPassword"/>
+
+    <TextView
+        android:id="@+id/asTvPassword"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_column="0"
+        android:layout_row="3"
         android:text="@string/asTvPassword"
         android:textSize="20sp"/>
 
@@ -79,7 +88,7 @@
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_column="1"
-        android:layout_row="2"
+        android:layout_row="3"
         android:ems="10"
         android:inputType="textPassword"/>
 
@@ -100,106 +109,3 @@
 
 
 </GridLayout>
-    <!--    <?xml version="1.0" encoding="utf-8"?>
-    <RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.project.rushabh.jarvis.AccountSetup">
-
-
-    <TextView
-        android:id="@+id/asTvName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/adTvName"
-        android:textSize="20sp"
-        android:layout_alignBaseline="@+id/asEtName"
-        android:layout_alignBottom="@+id/asEtName"
-        android:layout_toLeftOf="@+id/asEtName"
-        android:layout_toStartOf="@+id/asEtName"
-        android:layout_marginRight="34dp"
-        android:layout_marginEnd="34dp"/>
-
-    <EditText
-        android:id="@+id/asEtName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginEnd="24dp"
-        android:layout_marginRight="24dp"
-        android:layout_marginTop="40dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text=""/>
-
-    <TextView
-        android:id="@+id/asTvId"
-        android:textSize="20sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="51dp"
-        android:text="@string/asTvId"
-        android:layout_below="@+id/asEtName"
-        android:layout_alignRight="@+id/asTvName"
-        android:layout_alignEnd="@+id/asTvName"/>
-
-    <EditText
-        android:id="@+id/asEtId"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text=""
-        android:layout_alignBaseline="@+id/asTvId"
-        android:layout_alignBottom="@+id/asTvId"
-        android:layout_alignLeft="@+id/asEtName"
-        android:layout_alignStart="@+id/asEtName"/>
-
-    <TextView
-        android:id="@+id/asTvPassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/asTvId"
-        android:layout_alignRight="@+id/asTvId"
-        android:layout_below="@+id/asEtId"
-        android:layout_marginTop="48dp"
-        android:text="@string/asTvPassword"
-        android:textSize="20sp"/>
-
-    <EditText
-        android:id="@+id/asEtPassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/asEtId"
-        android:layout_alignStart="@+id/asEtId"
-        android:layout_below="@+id/asEtId"
-        android:layout_marginTop="37dp"
-        android:ems="10"
-        android:inputType="textPassword"/>
-
-    <Button
-        android:id="@+id/asBuSave"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="101dp"
-        android:layout_toLeftOf="@+id/asEtPassword"
-        android:layout_toStartOf="@+id/asEtPassword"
-        android:text="@string/asBuSave"/>
-
-    <Button
-        android:id="@+id/asBuCancel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/asEtPassword"
-        android:layout_alignRight="@+id/asEtPassword"
-        android:layout_alignTop="@+id/asBuSave"
-        android:layout_marginEnd="35dp"
-        android:layout_marginRight="35dp"
-        android:text="@string/asBuCancel"/>
-    </RelativeLayout>
-    -->
