--- a/app/src/main/res/layout/fragment_appliances.xml
+++ b/app/src/main/res/layout/fragment_appliances.xml
@@ -5,14 +5,12 @@
                 android:paddingBottom="@dimen/activity_vertical_margin"
                 android:paddingLeft="@dimen/activity_horizontal_margin"
                 android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_vertical_margin"
-                tools:context="com.project.rushabh.jarvis.Appliances$PlaceholderFragment">
+                android:paddingTop="@dimen/activity_vertical_margin">
 
     <GridView
         android:id="@+id/appGridView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:numColumns="2"/>
-
 
 </RelativeLayout>
